--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
       <div class="header">
         <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+        <h3>Test git</h3>
       </div>
       <div class="main-content">
         <div class="text-area">
